-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 16, 17, 18
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8278708 | 19 | Markus Grönlund | P3 | Resolved | Fixed | team |
Today, there are some uses of intptr_t and size_t intermixed with int64_t, which can lead to truncation on specific platforms.
- backported by
-
JDK-8278708 Use int64_t to represent byte quantities consistently in JfrObjectAllocationSample
-
- Resolved
-