8278336: Use int64_t to represent byte quantities consistently in JfrObjectAllocationSample

Reviewed-by: egahlin